# DuckyOS

./: CMakeLists.txt  Makefile  README  README.md  doxygen  index.html  params.json
doc/: Doxyfile
doxygen/: _makefile_8inc.html  _makefile_8inc_source.html  annotated.html  annotated.js  apic_8c.html  apic_8c.js  apic_8c_source.html  apic_8h.html  apic_8h.js  apic_8h_source.html  arch_8c.html  arch_8c.js  arch_8c_source.html  arch_8h.html  arch_8h_source.html  classes.html  doxygen.css  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_0x61.html  globals_0x62.html  globals_0x63.html  globals_0x66.html  globals_0x67.html  globals_0x69.html  globals_0x6b.html  globals_0x6c.html  globals_0x6d.html  globals_0x70.html  globals_0x73.html  globals_0x74.html  globals_0x75.html  globals_0x76.html  globals_defs.html  globals_dup.js  globals_enum.html  globals_eval.html  (+76 more)
doxygen/html/: _makefile_8inc.html  _makefile_8inc_source.html  annotated.html  annotated.js  apic_8c.html  apic_8c_source.html  apic_8h.html  apic_8h.js  apic_8h_source.html  arch_8c.html  arch_8c_source.html  arch_8h.html  arch_8h.js  arch_8h_source.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x61.html  globals_0x62.html  globals_0x63.html  globals_0x66.html  globals_0x67.html  globals_0x69.html  globals_0x6b.html  globals_0x6c.html  globals_0x6d.html  globals_0x70.html  globals_0x73.html  globals_0x74.html  globals_0x75.html  globals_0x76.html  globals_defs.html  globals_dup.js  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  (+73 more)
doxygen/html/search/: all_5f.js  all_69.js  all_6b.js  all_6d.js  all_76.js  classes_5f.js  enumvalues_63.js  files_70.js  functions_6d.js  functions_74.js  functions_75.js  search.js  typedefs_69.js  typedefs_70.js  variables_64.js  variables_66.js  variables_70.js  variables_72.js  variables_75.js  variables_76.js
doxygen/search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_66.js  all_67.js  all_69.js  all_6c.js  all_6d.js  all_70.js  all_73.js  all_74.js  all_75.js  all_76.js  classes_5f.js  classes_67.js  classes_69.js  classes_6c.js  defines_61.js  defines_69.js  defines_6b.js  defines_6d.js  defines_70.js  defines_73.js  enums_63.js  enums_76.js  files_61.js  files_69.js  files_74.js  functions_5f.js  functions_61.js  functions_67.js  functions_69.js  functions_6b.js  functions_70.js  search.css  search.js  variables_5f.js  variables_61.js  (+12 more)
img/boot/grub/: grub.cfg
src/: CMakeLists.txt
src/sys/: CMakeLists.txt  Makefile  kernel.c  kernel.ld  keyboard.c  keyboard.h  terminal.c  terminal.h  test.cpp
src/sys/arch/: arch.h
src/sys/arch/i686/: CMakeLists.txt  Makefile.inc  apic.c  apic.h  arch.c  entry.s  irq.c  irqdefs.h  isr.h  isr.s  paging.c  paging.h  pic.c  pic.h  pit.c  pit.h  tables.c  tables.h  timer.h  util.h
src/sys/arch/i686/drv/: CMakeLists.txt  i8042.c  i8042.h
src/sys/arch/i686/drv/pci/: .#pci.c  pci.c
src/sys/drv/pci/: identifiers.h  pci.h
src/sys/pci/: identifiers.h
src/sys/video/: vga.h
tools/: CMakeLists.txt  Makefile
